--- a/230711/login/css/index.css
+++ b/230711/login/css/index.css
@@ -35,6 +35,7 @@ a {
   height: 140px;
   padding: 18px 15px;
   box-sizing: border-box;
+  font-size: 12px;
 }
 
 .login-btn {
@@ -63,9 +64,9 @@ a {
 .id img {
   width: 16px;
   vertical-align: middle;
-  margin-right: 4px;
+  /* margin-right: 4px; */
 }
 
-.id {
+.id span {
   margin: 0 2px;
 }
