--- a/230714/profile-page/css/style.css
+++ b/230714/profile-page/css/style.css
@@ -1,65 +1,91 @@
-body,
 h1,
 h2,
-div {
-  margin: 0;
+p,
+ul {
+  margin: unset;
+  padding: unset;
 }
 
 body {
   background-image: url(../images/background.gif);
-  color: white;
+  background-size: cover;
 }
 
-div {
-  color: inherit;
+h1,
+p {
+  margin: initial;
 }
 
-img {
-  margin: 0 auto;
-  display: block;
+li {
+  list-style-type: none;
 }
 
 .wrapper {
   width: 800px;
-  margin: 0 auto;
+  height: auto;
+  margin: 100px auto;
   background-color: #ddd;
 }
 
 .header {
   background-image: url(../images/cover.png);
-  background-repeat: no-repeat;
   background-size: cover;
   padding: 100px 0;
+  color: white;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
 }
 
 .header h1 {
-  text-align: center;
   font-size: 100px;
+  font-style: bold;
+  text-align: center;
 }
 
 .header p {
+  width: auto;
   margin: 0 auto;
   border-top: 4px solid white;
-  color: inherit;
   width: fit-content;
   padding: 10px 20px;
 }
 
-.content {
+.section {
   background-color: white;
-  color: black;
+  margin: 20px;
+  padding: 20px;
+  background-image: url(../images/icon-information.png);
+  background-position: right 30px center;
+  background-repeat: no-repeat;
 }
 
 .skill {
-  padding: 20px;
-  margin: 20px;
+  background-image: url(../images/icon-skills.png);
 }
 
-.information {
-  padding: 20px;
-  margin: 20px;
+ul li {
+  border-left: 5px solid #ddd;
+  padding-left: 10px;
 }
 
-.main li {
-  list-style-type: none;
+.section h2 {
+  color: royalblue;
+}
+
+.footer {
+  text-align: center;
+  margin: 20px;
+  background-color: #ddd;
+  height: 40px;
+}
+
+.footer a {
+  color: royalblue;
+  text-decoration: none;
+  border: 1px solid royalblue;
+  border-radius: 30px;
+  padding: 4px;
 }
