--- a/230828/dragdrop/style.css
+++ b/230828/dragdrop/style.css
@@ -1,21 +1,93 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato&family=Neonderthaw&family=Oswald:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap");
 * {
   padding: 0;
   margin: 0;
 }
+ul,
+li {
+  list-style: none;
+}
+img {
+  vertical-align: top;
+}
+.a11y-hidden {
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+}
 
 body {
   min-height: 100vh;
-  background: linear-gradient(
-    45deg,
-    rgba(254, 232, 108),
-    rgba(119, 189, 247, 0.589)
-  );
+  background: linear-gradient(45deg, rgb(254, 232, 108), rgb(132, 228, 241));
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  display: flex;
+  gap: 60px;
+  align-items: center;
 }
 
 h1 {
-  font-size: 80px;
   font-weight: normal;
-  font-family: "Neonderthaw", cusrsive;
+  font-family: "Neonderthaw", cursive;
   color: white;
+  width: min-content;
+  line-height: 0.7;
+  font-size: 160px;
+  text-align: center;
+  margin-top: -0.3em;
+}
+h1 span {
+  font-size: 0.7em;
+}
+section {
+  background-color: white;
+  width: 400px;
+}
+
+.drop-target {
+  padding: 20px;
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+}
+.drag-item {
+  border: 1px solid #ddd;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.drag-item p {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.drag-item img {
+  width: 48px;
+  aspect-ratio: 1;
+  object-fit: cover;
+  border-radius: 50%;
+
+  /* 이미지 개별 drag 불가 설정 */
+  pointer-events: none;
+}
+.drag-item ~ li {
+  margin-top: 10px;
+}
+
+.drag-item.dragging {
+  border: 1px dashed #ccc;
+  background-color: #f5f5f5;
+}
+
+.drag-item.dragging > * {
+  opacity: 0.2;
 }
